--- a/CrFeedback.kv
+++ b/CrFeedback.kv
@@ -4,23 +4,25 @@
     Button:
         background_color:root.bcolour
         text:root.answer_text
-        font_size:'60dp'
+        font_size:root.font_size#'72dp'
+        color:0,0,0,1
         on_press:root.dismiss()
 
 <MainView>:
     orientation:'vertical'
     BoxLayout:
-        size_hint:1,0.2
+        size_hint:1,0.3
         orientation:'horizontal' 
         TextInput:
             size_hint:0.6,1
+            font_size:20
             id: txt_in
         Button:
             size_hint:0.15,1
             text:'->'
-            on_press:root.show_answer(self.background_color,txt_in.text,chb_stealth.active)
+            on_press:root.show_answer([2,3,2,1],txt_in.text,chb_stealth.active,font_size='40dp')
         Label:
-            #size_hint:0.20,1
+            size_hint:0.2,1
             text:'hide answer'
         CheckBox:
             size_hint:0.05,1
@@ -32,22 +34,22 @@
             background_color:2,2,2,1
             text:'a'
             font_size:'36dp'
-            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active)
+            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active,font_size='90dp')
         Button:
             background_color:2,2,2,1
             text:'b'
             font_size:'36dp'
-            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active)
+            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active,font_size='90dp')
         Button:
             background_color:2,2,2,1
             text:'c'
             font_size:'36dp'
-            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active)
+            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active,font_size='90dp')
         Button:
             background_color:2,2,2,1
             text:'d'
             font_size:'36dp'
-            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active)
+            on_press:root.show_answer(self.background_color,self.text,chb_stealth.active,font_size='90dp')
     Button:
         background_color:0,33,0,1
         on_press:root.show_answer(self.background_color,stealth=chb_stealth.active)
